# meaningful-memories

./: .gitignore  README.md  pyproject.toml  run_pipeline.sh
meaningful_memories/: __init__.py  annotation_utils.py  config.py  extracter.py  interview.py  linker.py  pipeline.py  transcriber.py  transcript.py  transcript_chunk.py  utils.py
meaningful_memories/annotation_data/: amsterdammuseum_uva_videos.json
meaningful_memories/configs/: config.yaml
meaningful_memories/data/: adamlinkgebouwen.ttl  streets.csv
meaningful_memories/scripts/: find_fragments.py  postprocess_annotations.py
tests/: test_extracter.py  test_linker.py
