[project]
name = "meaningful_memories"
dynamic = ["version"]
packages = [
  { include = "meaningful_memories" }
]

dependencies = [
    "gliner",
    "librosa",
    "numpy",
    "ollama",
    "pydub",
    "rapidfuzz",
    "transformers",
    "whisperx",
]

[tool.setuptools]
include-package-data = true
py-modules = []
