[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meaningful_memories"
dynamic = ["version"]

dependencies = [
    "gliner",
    "librosa",
    "numpy",
    "ollama",
    "pydub",
    "rapidfuzz",
    "torch",
    "torchaudio",
    "torchvision",
    "transformers",
    "whisperx",
]


[tool.setuptools.packages.find]
include = ["meaningful_memories"]